compiler/testData/diagnostics/tests/controlStructures/valVarLoopParameter.kt
fun f() {
    for (<!VAL_OR_VAR_ON_LOOP_PARAMETER!>val<!> i in 1..4) {

    }

    for (<!VAL_OR_VAR_ON_LOOP_PARAMETER!>var<!> i in 1..4) {

    }
}
